--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Settings
 
+## Prefix
+set-option -g prefix C-space
+
 ## 256 Colors
 set-option -s default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
