splits open in the same directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,5 +45,9 @@ setw -g aggressive-resize on
 set -g status-bg red
 set -g status-fg black
 
+## Open splits in the same path
+bind '"' split-window -v -c '#{pane_current_path}'
+bind '%' split-window -h -c '#{pane_current_path}'
+
 ## Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
