allow for block selection in copy mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,7 @@ set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 ## Vim Mode
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'C-v' rectangle-toggle
 
 ## Index from 1
 set -g base-index 1
