--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,11 @@
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tpm'
 
 # Settings
 
@@ -18,7 +19,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 ## Prefix Highlight
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
-set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+set -g status-right '#{prefix_highlight} |#{battery_status_bg} batt: #{battery_percentage} #{battery_remain}| %a %Y-%m-%d %H:%M'
 
 ## Vim Mode
 set-window-option -g mode-keys vi
