update tmux and vim for base-16 ocean

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,8 +44,8 @@ set-option -g visual-bell off
 setw -g aggressive-resize on
 
 ## Status Bar
-set -g status-bg red
-set -g status-fg black
+set -g status-bg colour59
+set -g status-fg white
 
 ## Open splits in the same path
 bind '"' split-window -v -c '#{pane_current_path}'
