update Xresources, i3blocks, i3, termite

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -1,38 +1,41 @@
 command=/usr/lib/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=30
 markup=none
+
+[packages]
+command=/home/jfmyers9/workspace/i3blocks/blocks/packages
+label=
+interval=300
 
 [audio]
 command=/home/jfmyers9/workspace/i3blocks/blocks/audio
+color=#a3db05
 interval=5
 label=
+signal=10
 
 [brightness]
 command=/home/jfmyers9/workspace/i3blocks/blocks/brightness
 interval=5
 label=
-
-[cpu_usage]
-interval=10
-label=CPU
-min_width=CPU: 100.00%
+signal=11
 
 [battery]
-#instance=1
 interval=30
 label=BAT
 label=
 
 [network]
 command=/home/jfmyers9/workspace/i3blocks/blocks/network
+color=#fbe562
 instance=wlp58s0
 interval=10
 label=
 
 [ssid]
 command=/home/jfmyers9/workspace/i3blocks/blocks/ssid
+color=#40e0d0
 interval=60
-label=@
 
 [datetime]
 command=/home/jfmyers9/workspace/i3blocks/blocks/datetime
