--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -39,6 +39,6 @@ interval=60
 
 [datetime]
 command=/home/jfmyers9/workspace/i3blocks/blocks/datetime
-instance=%Y-%m-%d %H:%M:%S
+instance=%Y-%m-%d %r
 interval=5
 label=
