add steam to i3 and update packages interval

--- a/i3/config
+++ b/i3/config
@@ -57,7 +57,7 @@ bindsym $mod+a focus parent
 # switch to workspace
 bindsym $mod+1 workspace 1 
 bindsym $mod+2 workspace 2 
-bindsym $mod+3 workspace 3
+bindsym $mod+3 workspace 3 
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -203,6 +203,8 @@ exec --no-startup-id feh --bg-scale /home/jfmyers9/desktop.png
 
 # assign workspaces + default apps
 assign [class="(?i)chromium"] 2 
+assign [class="(?i)steam"] 3 
 exec --no-startup-id termite
 exec --no-startup-id chromium
+exec --no-startup-id steam
 exec i3-msg workspace 1 
