--- a/i3/config
+++ b/i3/config
@@ -208,3 +208,7 @@ exec --no-startup-id termite
 exec --no-startup-id chromium
 exec --no-startup-id steam
 exec i3-msg workspace 1 
+
+# alt + tab
+bindsym Mod1+Tab workspace next
+bindsym Mod1+Shift+Tab workspace prev
