--- a/tmux.conf
+++ b/tmux.conf
@@ -23,8 +23,8 @@ set -g status-right '#{prefix_highlight}#{battery_status_fg} batt: #{battery_per
 
 ## Vim Mode
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'C-v' rectangle-toggle
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'C-v' send -X rectangle-toggle
 
 ## Index from 1
 set -g base-index 1
