--- a/tmux.conf
+++ b/tmux.conf
@@ -12,9 +12,8 @@ set -g @plugin 'tmux-plugins/tpm'
 ## Prefix
 set-option -g prefix C-space
 
-## 256 Colors
-set-option -s default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+## Colors
+set -ga terminal-overrides ",xterm-termite:Tc"
 
 ## Prefix Highlight
 set -g @prefix_highlight_show_copy_mode 'on'
