add i3 block for disabling/enabling touchscreen

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -2,6 +2,12 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=30
 markup=none
 
+[touchscreen]
+color=#00ff80
+command=/home/jfmyers9/workspace/dotfiles/i3blocks/touchscreen
+label=
+interval=10
+
 [packages]
 command=/home/jfmyers9/workspace/i3blocks/blocks/packages
 label=
