--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -3,9 +3,8 @@ separator_block_width=30
 markup=none
 
 [touchscreen]
-color=#00ff80
+markup=pango
 command=/home/jfmyers9/workspace/dotfiles/i3blocks/touchscreen
-label=
 interval=10
 
 [packages]
