--- a/i3/config
+++ b/i3/config
@@ -198,6 +198,9 @@ exec --no-startup-id redshift-gtk
 # start copyq
 exec --no-startup-id parcellite
 
+# start dunst
+exec --no-startup-id dunst --config /home/jfmyers9/.config/dunst/dunstrc
+
 # set background
 exec --no-startup-id feh --bg-scale /home/jfmyers9/desktop.png
 
