--- a/i3/config
+++ b/i3/config
@@ -193,6 +193,7 @@ exec --no-startup-id xautolock -time 10 -locker '$Locker'
 bindsym $mod+x [urgent=latest] focus
 
 # start redshift
+exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent
 exec --no-startup-id redshift-gtk
 
 # start copyq
