--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -12,6 +12,11 @@ command=/home/jfmyers9/workspace/dotfiles/i3blocks/packages
 label=
 interval=60
 
+[bluetooth]
+command=/home/jfmyers9/workspace/dotfiles/i3blocks/bluetooth
+interval=5
+label=
+
 [audio]
 command=/home/jfmyers9/workspace/i3blocks/blocks/audio
 color=#a3db05
