Switch steam to work tab

--- a/i3/config
+++ b/i3/config
@@ -57,7 +57,7 @@ bindsym $mod+a focus parent
 # switch to workspace
 bindsym $mod+1 workspace 1 
 bindsym $mod+2 workspace 2 
-bindsym $mod+3 workspace 3 
+bindsym $mod+3 workspace 3 
 bindsym $mod+4 workspace 4 
 bindsym $mod+5 workspace 5 
 bindsym $mod+6 workspace 6
@@ -69,7 +69,7 @@ bindsym $mod+0 workspace 10
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1 
 bindsym $mod+Shift+2 move container to workspace 2 
-bindsym $mod+Shift+3 move container to workspace 3 
+bindsym $mod+Shift+3 move container to workspace 3 
 bindsym $mod+Shift+4 move container to workspace 4 
 bindsym $mod+Shift+5 move container to workspace 5 
 bindsym $mod+Shift+6 move container to workspace 6
@@ -210,7 +210,6 @@ exec --no-startup-id compton -b --backend glx --vsync opengl
 
 # assign workspaces + default apps
 assign [class="(?i)chromium"] 2 
-assign [class="(?i)steam"] 3 
 exec --no-startup-id termite
 exec --no-startup-id chromium
 exec i3-msg workspace 1 
