Update tmux configuration for desktop

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ set -ga terminal-overrides ",xterm-termite:Tc"
 ## Prefix Highlight
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
-set -g status-right '#{prefix_highlight}#{battery_status_fg} batt: #{battery_percentage} #[fg=white]| %a %Y-%m-%d %H:%M:%S'
+set -g status-right '#{prefix_highlight}#[fg=white]%a %Y-%m-%d %H:%M:%S'
 
 ## Vim Mode
 set-window-option -g mode-keys vi
