--- a/i3/config
+++ b/i3/config
@@ -56,7 +56,7 @@ bindsym $mod+a focus parent
 
 # switch to workspace
 bindsym $mod+1 workspace 1 
-bindsym $mod+2 workspace 2 
+bindsym $mod+2 workspace 2 
 bindsym $mod+3 workspace 3 
 bindsym $mod+4 workspace 4 
 bindsym $mod+5 workspace 5 
@@ -209,9 +209,9 @@ exec --no-startup-id feh --bg-scale /home/jfmyers9/desktop.png
 exec --no-startup-id compton -b --backend glx --vsync opengl
 
 # assign workspaces + default apps
-assign [class="(?i)chromium"] 2 
+assign [class="(?i)firefox"] 2 
 exec --no-startup-id termite
-exec --no-startup-id chromium
+exec --no-startup-id firefox
 exec i3-msg workspace 1 
 
 # alt + tab
