--- a/i3/config
+++ b/i3/config
@@ -217,3 +217,6 @@ exec i3-msg workspace 1 
 # alt + tab
 bindsym Mod1+Tab workspace next
 bindsym Mod1+Shift+Tab workspace prev
+
+# remove titles and borders
+for_window [class="^.*"] border pixel 0
