--- a/i3/config
+++ b/i3/config
@@ -206,7 +206,7 @@ exec --no-startup-id dunst --config /home/jfmyers9/.config/dunst/dunstrc
 exec --no-startup-id feh --bg-scale /home/jfmyers9/desktop.png
 
 # compton setup
-exec --no-startup-id compton -b --backend glx --vsync opengl
+exec --no-startup-id compton -bc --backend glx --vsync
 
 # assign workspaces + default apps
 assign [class="(?i)firefox"] 2 
