--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -2,22 +2,36 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=30
 markup=none
 
+[memory]
+command=/usr/lib/i3blocks/memory/memory
+label=MEM
+interval=30
+color=#2584f7
+
+[cpu_usage2]
+markup=pango
+command=/usr/lib/i3blocks/cpu_usage2/cpu_usage2
+interval=persist
+
 [touchscreen]
 markup=pango
 command=/home/jfmyers9/workspace/dotfiles/i3blocks/touchscreen
 interval=10
 
 [packages]
+markup=pango
 command=/home/jfmyers9/workspace/dotfiles/i3blocks/packages
 label=
 interval=60
 
 [bluetooth]
+markup=pango
 command=/home/jfmyers9/workspace/dotfiles/i3blocks/bluetooth
 interval=5
 label=
 
 [audio]
+markup=pango
 command=/home/jfmyers9/workspace/i3blocks/blocks/audio
 color=#a3db05
 interval=5
@@ -25,17 +39,20 @@ label=
 signal=10
 
 [brightness]
+markup=pango
 command=/home/jfmyers9/workspace/i3blocks/blocks/brightness
 interval=5
 label=
 signal=11
 
 [battery]
+command=/usr/lib/i3blocks/battery2/battery2
 interval=30
-label=BAT
 label=
+markup=pango
 
 [network]
+markup=pango
 command=/home/jfmyers9/workspace/i3blocks/blocks/network
 color=#fbe562
 instance=wlp58s0
@@ -43,11 +60,13 @@ interval=10
 label=
 
 [ssid]
+markup=pango
 command=/home/jfmyers9/workspace/i3blocks/blocks/ssid
 color=#40e0d0
 interval=60
 
 [datetime]
+markup=pango
 command=/home/jfmyers9/workspace/i3blocks/blocks/datetime
 instance=%Y-%m-%d %r
 interval=5
