--- a/i3/config
+++ b/i3/config
@@ -57,9 +57,9 @@ bindsym $mod+a focus parent
 # switch to workspace
 bindsym $mod+1 workspace 1 
 bindsym $mod+2 workspace 2 
-bindsym $mod+3 workspace 3 
-bindsym $mod+4 workspace 4 
-bindsym $mod+5 workspace 5 
+bindsym $mod+3 workspace 3 
+bindsym $mod+4 workspace 4 
+bindsym $mod+5 workspace 5 
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
@@ -69,9 +69,9 @@ bindsym $mod+0 workspace 10
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1 
 bindsym $mod+Shift+2 move container to workspace 2 
-bindsym $mod+Shift+3 move container to workspace 3 
-bindsym $mod+Shift+4 move container to workspace 4 
-bindsym $mod+Shift+5 move container to workspace 5 
+bindsym $mod+Shift+3 move container to workspace 3 
+bindsym $mod+Shift+4 move container to workspace 4 
+bindsym $mod+Shift+5 move container to workspace 5 
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
@@ -213,6 +213,17 @@ assign [class="(?i)firefox"] 2 
 exec --no-startup-id termite
 exec --no-startup-id firefox
 exec i3-msg workspace 1 
+
+# start discord
+assign [class="(?i)discord"] 4 
+exec --no-startup-id discord
+
+# start google play music desktop player
+assign [class="(?i)Google Play Music Desktop Player"] 3 
+exec --no-startup-id gpmdp
+
+# start dropbox
+exec --no-startup-id dropbox
 
 # alt + tab
 bindsym Mod1+Tab workspace next
