touch up i3blocks config for desktop

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -2,17 +2,25 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=30
 markup=none
 
+[memory]
+command=/usr/lib/i3blocks/memory/memory
+label=MEM
+interval=30
+color=#2584f7
+
+[cpu_usage2]
+markup=pango
+command=/usr/lib/i3blocks/cpu_usage2/cpu_usage2
+interval=persist
+
 [packages]
+markup=pango
 command=/home/jfmyers9/workspace/dotfiles/i3blocks/packages
 label=
 interval=60
 
-[bluetooth]
-command=/home/jfmyers9/workspace/dotfiles/i3blocks/bluetooth
-interval=5
-label=
-
 [audio]
+markup=pango
 command=/home/jfmyers9/workspace/i3blocks/blocks/audio
 color=#a3db05
 interval=5
@@ -20,6 +28,7 @@ label=
 signal=10
 
 [datetime]
+markup=pango
 command=/home/jfmyers9/workspace/i3blocks/blocks/datetime
 instance=%Y-%m-%d %r
 interval=5
