--- a/i3/config
+++ b/i3/config
@@ -171,7 +171,7 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # I3 Lock Screen
-set $Locker i3lock -c 566573 -f && sleep 1
+set $Locker betterlockscreen -l blur
 
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
