Remove unnecessary setup from bash_profile
Also update tmux for iterm

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set-option -g prefix C-space
 
 ## Colors
-set -ga terminal-overrides ",xterm-termite:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 ## Prefix Highlight
 set -g @prefix_highlight_show_copy_mode 'on'
