--- a/i3/config
+++ b/i3/config
@@ -16,8 +16,9 @@ bindsym $mod+Return exec termite
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# launch j4-dmenu-desktop
-bindsym $mod+d exec --no-startup-id j4-dmenu-desktop
+# launch rofi
+bindsym $mod+d exec --no-startup-id rofi -combi-modi window#drun#ssh -theme base16-ocean -font "hack 10" -show combi
+
 
 # change focus
 bindsym $mod+h focus left
@@ -207,18 +208,14 @@ exec --no-startup-id dunst --config /home/jfmyers9/.config/dunst/dunstrc
 exec --no-startup-id feh --bg-scale /home/jfmyers9/desktop.png
 
 # assign workspaces + default apps
-assign [class="(?i)firefox"] 2 
+assign [class="(?i)chromium"] 2 
 exec --no-startup-id termite
-exec --no-startup-id firefox
+exec --no-startup-id chromium
 exec i3-msg workspace 1 
 
 # start discord
 assign [class="(?i)discord"] 4 
 exec --no-startup-id discord
-
-# start google play music desktop player
-assign [class="(?i)Google Play Music Desktop Player"] 3 
-exec --no-startup-id gpmdp
 
 # start dropbox
 exec --no-startup-id dropbox
